<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    style="@style/ProfileCardViewStyle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/base_element_margin">

        <ImageView
            android:id="@+id/image_doc_item"
            android:layout_width="@dimen/ic_size_big"
            android:layout_height="@dimen/ic_size_big"
            android:layout_marginTop="@dimen/base_element_margin"
            android:contentDescription="@string/photo_doctor"/>

        <TextView
            android:id="@+id/tv_price_name_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/base_element_margin"
            android:layout_marginStart="@dimen/base_element_margin"
            android:layout_marginTop="@dimen/base_element_margin"
            android:layout_toEndOf="@+id/image_doc_item"
            android:layout_toRightOf="@+id/image_doc_item"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_doc_hint_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_price_name_item"
            android:layout_alignStart="@+id/tv_price_name_item"
            android:layout_below="@+id/tv_price_name_item"
            android:layout_marginTop="@dimen/base_element_margin"
            android:gravity="start"
            android:text="@string/hint_doctor"/>

        <TextView
            android:id="@+id/tv_doc_name_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_doc_hint_item"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_price_name_item"
            android:layout_marginTop="@dimen/base_element_margin"
            android:layout_marginStart="@dimen/base_element_margin"
            android:layout_marginLeft="@dimen/base_element_margin"
            android:layout_toEndOf="@+id/tv_doc_hint_item"
            android:layout_toRightOf="@+id/tv_doc_hint_item"
            android:gravity="end"
            android:text="@string/hint_doctor_name"/>

        <TextView
            android:id="@+id/tv_date_hint_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/hint_reception_date"
            android:layout_alignBaseline="@+id/tv_date_item"
            android:layout_alignBottom="@+id/tv_date_item"
            android:layout_alignLeft="@+id/tv_doc_hint_item"
            android:layout_alignStart="@+id/tv_doc_hint_item"/>

        <TextView
            android:id="@+id/tv_date_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_doc_name_item"
            android:layout_marginTop="@dimen/base_element_margin"
            android:layout_toEndOf="@+id/tv_date_hint_item"
            android:layout_toRightOf="@+id/tv_date_hint_item"
            android:gravity="end"/>

        <Button
            android:id="@+id/btn_cancel_profile_item"
            android:layout_width="@dimen/base_size_128dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_date_item"
            android:layout_marginTop="@dimen/base_element_margin"
            android:text="@string/btn_cancel"/>

        <Button
            android:id="@+id/btn_confirm_profile_item"
            android:layout_width="@dimen/base_size_128dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_date_item"
            android:layout_marginTop="@dimen/base_element_margin"
            android:visibility="gone"
            android:text="@string/btn_confirm"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>