<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_chat_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:clipToPadding="false"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/light_gray"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_hide_keyboard"
            android:layout_width="@dimen/base_size_48dp"
            android:layout_height="@dimen/base_size_48dp"
            android:layout_gravity="top"
            android:contentDescription="@string/keyboard"
            app:srcCompat="@drawable/ic_keyboard_gray_24dp"/>

        <EditText
            android:id="@+id/et_send_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:background="@null"
            android:focusable="true"
            android:hint="@string/hint_message"
            android:maxLength="160"
            android:maxLines="3"
            android:paddingTop="@dimen/base_element_margin"/>

        <ImageButton
            android:id="@+id/btn_send_message"
            android:layout_width="@dimen/base_size_48dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/action_send"
            app:srcCompat="@drawable/ic_send_white_24dp"/>

    </LinearLayout>

</RelativeLayout>