<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_element_margin"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/base_margin_64dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/base_margin_32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_20sp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/rate_us"/>

            <RatingBar
                android:id="@+id/rating_bar_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:numStars="5"
                android:stepSize="1"
                tools:rating="3"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/view_play_store_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="@dimen/base_element_margin"
                        android:layout_marginStart="@dimen/base_element_margin"
                        android:layout_marginTop="@dimen/base_element_margin"
                        android:gravity="center"
                        android:text="@string/rating_play_store_redirect_message_line_1"
                        android:textSize="@dimen/text_size_16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginEnd="@dimen/base_element_margin"
                        android:layout_marginStart="@dimen/base_element_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:gravity="center"
                        android:text="@string/rating_play_store_redirect_message_line_2"/>

                    <Button
                        android:id="@+id/btn_rate_on_play_store"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/base_element_margin"
                        android:text="@string/rating_play_store_text"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_rating_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:gravity="center"
                        android:text="@string/rating_message"
                        android:textSize="@dimen/text_size_16sp"/>

                    <EditText
                        android:id="@+id/et_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/base_element_margin"
                        android:background="@drawable/corner_border_rect_gray"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:maxLines="20"
                        android:padding="@dimen/base_element_margin"/>
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/base_element_margin">

            <Button
                android:id="@+id/btn_later"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/later"/>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/submit"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
